fix hp section spacing

--- a/src/scss/layout/_sections.scss
+++ b/src/scss/layout/_sections.scss
@@ -63,6 +63,6 @@
 }
 
 .l-hero {
-    margin-bottom: offset(main) * 6;
+    margin-bottom: offset(main) * 9;
     position: relative;
 }
