--- a/styleguide/main.css
+++ b/styleguide/main.css
@@ -1875,7 +1875,7 @@ body.is-header-open {
           display: none; } }
 
 .l-hero {
-  margin-bottom: 60px;
+  margin-bottom: 90px;
   position: relative; }
 
 /* ==========================================================================
